test/error/dangling_stmt.sv
module top;
    logic y;
    y = 1;
endmodule
